Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostpath
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostpath

        violation[{"msg": msg}] {
          v := input.review.object.spec.volumes[_]
          v.hostPath
          msg := sprintf("hostPath запрещён: volume %v (%v)", [v.name, v.hostPath.path])
        }
